envoyfilter-teaching/envoyfilter/listener_filter/deploy-udp.yaml
apiVersion: v1
kind: Service
metadata:
  name: udp
spec:
  ports:
  - port: 5005
    protocol: UDP
    name: udp
  selector:
    app: udp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: udp-v1
  labels:
    app: udp
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: udp
      version: v1
  template:
    metadata:
      labels:
        app: udp
        version: v1
    spec:
      containers:
      - name: udp
        image: mendhak/udp-listener
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5005
---
