envoyfilter-teaching/envoyfilter/listener_filter/ingress-productpage.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: productpage
  annotations:
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/upstream-vhost: productpage.istio.svc.cluster.local
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: productpage
            port: 
              number: 8083
